Cleaned up exporting
More example scripts for QXAS data analysis

--- a/notebooks/3.0 Example - Experiment Class - QEXAFS Data Processing - Parameter determination using small data set.ipynb
+++ b/notebooks/3.0 Example - Experiment Class - QEXAFS Data Processing - Parameter determination using small data set.ipynb
@@ -5,7 +5,7 @@
    "id": "dbbe6c73",
    "metadata": {},
    "source": [
-    "# 3.0 Example - QEXAFS Data Processing - Parameter Definitions\n",
+    "# 3.0 Example - Experiment Class - QEXAFS Data Processing - Parameter determination using small data set\n",
     "\n",
     "Goal of Workflow:\n",
     "\n",
@@ -209,6 +209,10 @@
     "    duplicate data points or nan/inf values.\n",
     "    \n",
     "    for QXAS, data parsing may result in short/long data sets that need to be removed prior to further processing.\n",
+    "    \n",
+    "### Major steps for cleaning up data:\n",
+    "    a. Remove duplicate points, NaN/inf values, and Zero values\n",
+    "    b. Remove short/long data sets\n",
     "    \n",
     "### 5a. Remove duplicate points, NaN/inf values, and Zero values"
    ]
