--- a/notebooks/3.1 Example - Experiment Class - QEXAFS Data Processing - Data Import, Cleanup, Process Correlation - large data sets.ipynb
+++ b/notebooks/3.1 Example - Experiment Class - QEXAFS Data Processing - Data Import, Cleanup, Process Correlation - large data sets.ipynb
@@ -5,9 +5,10 @@
    "id": "e26c063d",
    "metadata": {},
    "source": [
-    "# 3.1 Example - QEXAFS Data Processing - Data Inport, Cleanup, Process Correlation\n",
+    "# 3.1 Example - Experiment Class - QEXAFS Data Processing - Data Import, Cleanup, Process Correlation - large data sets\n",
     "\n",
-    "Goal of Workflow:\n",
+    "\n",
+    "### Goal of Workflow:\n",
     "\n",
     "    1. Import all QEXAFS data\n",
     "    2. Calculate absorption coefficients\n",
@@ -228,11 +229,16 @@
    "metadata": {},
    "source": [
     "## Step 5. Clean up Data\n",
+    "\n",
     "#### STILL IN DEVELOPMENT\n",
     "    If spectra were collected using CXAS or QXAS there is a chance that the raw data may need cleaning up to remove\n",
     "    duplicate data points or nan/inf values.\n",
     "    \n",
     "    for QXAS, data parsing may result in short/long data sets that need to be removed prior to further processing.\n",
+    "    \n",
+    "### Major steps for cleaning up data:\n",
+    "    a. Remove duplicate points, NaN/inf values, and Zero values\n",
+    "    b. Remove short/long data sets\n",
     "    \n",
     "### 5a. Remove duplicate points, NaN/inf values, and Zero values"
    ]
