--- a/notebooks/3.2 Example - Experiment Class - QEXAFS Data Processing - Bulk Calibration, Normalization.ipynb
+++ b/notebooks/3.2 Example - Experiment Class - QEXAFS Data Processing - Bulk Calibration, Normalization.ipynb
@@ -7,9 +7,11 @@
    "source": [
     "# 3.2 Example - QEXAFS Data Processing - Bulk Calibration, Normalization\n",
     "\n",
-    "## This notebook assumes that you have run \"3.0 Example - Experiment Class - QEXAFS Data Processing - Parameter Definitions\"\n",
+    "## This notebook assumes that you have run \n",
+    "    1. 3.0 Example - Experiment Class - QEXAFS Data Processing - Parameter determination using small data set\n",
+    "    2. 3.1 Example - Experiment Class - QEXAFS Data Processing - Data Import, Cleanup, Process Correlation - large data sets\n",
     "\n",
-    "Goal of Workflow:\n",
+    "### Goal of Workflow:\n",
     "\n",
     "    1. Open existing experiment pickle\n",
     "    2. Apply Energy Calibration and E0 parameters to data\n",
