--- a/notebooks/3.4 Example - Experiment Class - QEXAFS Data Processing - XAS Merge-Export for Demeter EXAFS Modeling.ipynb
+++ b/notebooks/3.4 Example - Experiment Class - QEXAFS Data Processing - XAS Merge-Export for Demeter EXAFS Modeling.ipynb
@@ -5,23 +5,22 @@
    "id": "60864341",
    "metadata": {},
    "source": [
-    "# 3.4 Example - QEXAFS Data Processing - XAS Merging and Exporting\n",
+    "# 3.4 Example - QEXAFS Data Processing -  XAS Merge-Export for Demeter EXAFS Modeling\n",
     "\n",
-    "## This notebook assumes that you have run \"3.2 Example - Experiment Class - QEXAFS Data Processing - Bulk Calibration, Normalization\"\n",
+    "## This notebook assumes that you have run\n",
+    "    1. 3.2 Example - QEXAFS Data Processing - Bulk Calibration, Normalization\n",
     "\n",
-    "Goal of Workflow:\n",
+    "### Goal of Workflow:\n",
     "\n",
     "    1. Open existing experiment pickle\n",
     "    2. Merge data\n",
-    "    3. Save Merged and Process Params\n",
-    "    \n",
-    "This workflow does not resample data to improve to S/N.  Resampling still in development.\n",
+    "    3. Save Merged Spectrum and Process Params\n",
     "    \n",
     "  \n",
     "### Merge Process:\n",
-    "    Step 1: Use two spectra in the experient to identify an energy value wiht a large change in absorption as a function of scan (whiteline intensity durign reduction is a good startin gpoint)\n",
+    "    Step 1: Use two spectra in the experient to identify an energy value wiht a large change in absorption as a function of scan (white line intensity during reduction is a good starting point)\n",
     "    Step 2: Determine which spectra are at steady state based upon change in absorption coefficient\n",
-    "    Step 3: Merge subset of spectra\n",
+    "    Step 3: Merge [subset of] spectra\n",
     "    Step 4: Save merged data\n",
     "    \n",
     "    Note: If experiment only contains steady state data there will be very little interpretion in what spectra to merge. a first to last option is likely the default.\n",
