Better Screening for poorly sized data sets

--- a/notebooks/3.3 Example - Experiment Class - QEXAFS Data Processing - XAS Interpolation-Export for PCA MCR-ALS.ipynb
+++ b/notebooks/3.3 Example - Experiment Class - QEXAFS Data Processing - XAS Interpolation-Export for PCA MCR-ALS.ipynb
@@ -7,8 +7,9 @@
    "source": [
     "# 3.3 Example - Experiment Class - QEXAFS Data Processing - XAS Interpolation-Export for PCA MCR-ALS\n",
     "\n",
-    "## This notebook assumes that you have run \n",
-    "    1. 3.2 Example - QEXAFS Data Processing - Bulk Calibration, Normalization\n",
+    "## This notebook assumes that you have run either: \n",
+    "    1. 3.0 Example - Experiment Class - QEXAFS Data Processing - Parameter determination using small data set\n",
+    "    2. 3.2 Example - QEXAFS Data Processing - Bulk Calibration, Normalization\n",
     "\n",
     "### Goal of Workflow:\n",
     "\n",
@@ -177,9 +178,9 @@
    "outputs": [],
    "source": [
     "# Set the energy range and step size to interpolate onto\n",
-    "start = 7000\n",
-    "stop = 7800\n",
-    "step = 0.25"
+    "start = 7000 #eV\n",
+    "stop = 7800 #eV\n",
+    "step = 0.25 #eV"
    ]
   },
   {
