--- a/notebooks/2.4 Example - Experiment Class - Exporting Data.ipynb
+++ b/notebooks/2.4 Example - Experiment Class - Exporting Data.ipynb
@@ -83,8 +83,7 @@
     "    4. fname_correlation - file name for saving spectra-process correlation data\n",
     "    5. fit_name - which LCF fit to be exported\n",
     "    6. LCFReport_name - filename for saving the LCF fit report\n",
-    "    7.\n",
-    "    "
+    "    7. fname_interpXAS = filename for saving normalized XAS spectra"
    ]
   },
   {
