--- a/notebooks/3.5 Example - Experiment Class - QEXAFS Data Processing - Summary Exporting.ipynb
+++ b/notebooks/3.5 Example - Experiment Class - QEXAFS Data Processing - Summary Exporting.ipynb
@@ -87,7 +87,7 @@
    "outputs": [],
    "source": [
     "# Directory Containing Experiment:\n",
-    "pickle_dir = r'D:\\UU QEXAFS Workup\\Nina - BF31\\QEXAFS Python Workup Testing 20220922'\n",
+    "pickle_dir = r'C:\\Users\\ashoff\\Desktop\\Preefer Test Data\\Python Results'\n",
     "\n",
     "# Name of Experiment (must include extension '.pickle')\n",
     "pickle_name = 'BF31-Fe-B.pickle'\n",
