Added Developmental Filed

--- a/notebooks/2.1 Example - Experiment Class -  Normalized XANES-EXAFS-FT.ipynb
+++ b/notebooks/2.1 Example - Experiment Class -  Normalized XANES-EXAFS-FT.ipynb
@@ -5,7 +5,7 @@
    "id": "315a963d",
    "metadata": {},
    "source": [
-    "# 2.1 Example - Using the Experiment Class to Normalize XANES, Extract EXAFS and Perform Fourier-Transofrm of the EXAFS \n",
+    "## 2.1 Example - Using the Experiment Class to Normalize XANES, Extract EXAFS and Perform Fourier-Transofrm of the EXAFS \n",
     "\n",
     "    In this example XAS data will be read into the Experiment Class object and bulk processed.\n",
     "\n",
