--- a/notebooks/3.4 Example - Experiment Class - QEXAFS Data Processing - XAS Merge-Export for Demeter EXAFS Modeling.ipynb
+++ b/notebooks/3.4 Example - Experiment Class - QEXAFS Data Processing - XAS Merge-Export for Demeter EXAFS Modeling.ipynb
@@ -122,7 +122,7 @@
    "source": [
     "## Step 3. Open Saved Experiment using 'pickle'\n",
     "\n",
-    "    Pickle - A method to save the experimental class and reopen it elsewhere."
+    "    Pickle - A method to save the experimental class and reopen it elsewhere.![image.png](attachment:image.png)"
    ]
   },
   {
