--- a/notebooks/3.0 Example - Experiment Class - QEXAFS Data Processing - Parameter determination using small data set.ipynb
+++ b/notebooks/3.0 Example - Experiment Class - QEXAFS Data Processing - Parameter determination using small data set.ipynb
@@ -398,7 +398,7 @@
     "energy_range = [-15, 5] # Ref to E0. Energy range to look for inflection point to define E0\n",
     "\n",
     "\n",
-    "# DO NOT NEED TO MODIFY BELOw\n",
+    "# DO NOT NEED TO MODIFY BELOW\n",
     "\n",
     "plot_range = 20 # Ref to E0.\n",
     "\n",
