--- a/notebooks/2.0.1 Example - Experiment Class - Remove Raw Data From Experiment.ipynb
+++ b/notebooks/2.0.1 Example - Experiment Class - Remove Raw Data From Experiment.ipynb
@@ -115,6 +115,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d5ee1d74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['XAS Data Structure', 'Time', 'BL Data', 'Absorption Spectra']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(my_exp.spectra[scan_name].keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "dfc50574",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Group 20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0001<table><tr><td><b>Attribute</b></td><td><b>Type</b></td></tr><tr><td>path</td><td><i>str</i></td></tr><tr><td>filename</td><td><i>str</i></td></tr><tr><td>header</td><td><i>list</i></td></tr><tr><td>data</td><td><i>ndarray</i></td></tr><tr><td>array_labels</td><td><i>list</i></td></tr><tr><td>attrs</td><td><i>Group</i></td></tr><tr><td>Encoder</td><td><i>ndarray</i></td></tr><tr><td>Energy</td><td><i>ndarray</i></td></tr><tr><td>ADC_01</td><td><i>ndarray</i></td></tr><tr><td>ADC_02</td><td><i>ndarray</i></td></tr><tr><td>ADC_03</td><td><i>ndarray</i></td></tr><tr><td>ADC_04</td><td><i>ndarray</i></td></tr><tr><td>ADC_05</td><td><i>ndarray</i></td></tr><tr><td>ADC_06</td><td><i>ndarray</i></td></tr><tr><td>ADC_07</td><td><i>ndarray</i></td></tr><tr><td>ADC_08</td><td><i>ndarray</i></td></tr></table>"
+      ],
+      "text/plain": [
+       "<Group 20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0001>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_exp.spectra[scan_name]['BL Data']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3e36e363",
    "metadata": {},
@@ -124,13 +169,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "eb787096",
    "metadata": {},
    "outputs": [],
    "source": [
     "for key in my_exp.__dict__['spectra'].keys():\n",
     "    my_exp.__dict__['spectra'][key].pop('BL Data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1700033d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['XAS Data Structure', 'Time', 'Absorption Spectra']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(my_exp.spectra[scan_name].keys())"
    ]
   },
   {
@@ -145,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "48766d49",
    "metadata": {},
    "outputs": [],
