--- a/notebooks/MCR-ALS Testing.ipynb
+++ b/notebooks/MCR-ALS Testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "9bb70356",
    "metadata": {},
    "outputs": [],
@@ -244,8 +244,557 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 214,
+   "id": "20ca87ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This function computes the factor of the argument passed\n",
+    "def factors(x, disp = True):\n",
+    "    for i in range(1, x + 1):\n",
+    "        if x % i == 0 and i <= (x+1)/2:\n",
+    "            if i == 1:\n",
+    "                df = pd.DataFrame({'Factor 1': [i], 'Factor 2': [x/i], 'delta':[abs(i-x/i)]})\n",
+    "            else:\n",
+    "                new_df = pd.DataFrame({'Factor 1': [i], 'Factor 2': [x/i], 'delta':[abs(i-x/i)]})\n",
+    "                \n",
+    "                df = pd.concat([df, new_df], ignore_index=True)\n",
+    "                  \n",
+    "    if disp:\n",
+    "        print(\"The factors of\",x,\"are:\")\n",
+    "        print(df)\n",
+    "    \n",
+    "    return df\n",
+    "\n",
+    "def print_resid(num, disp = True):\n",
+    "    resid = []\n",
+    "    corr = []\n",
+    "    \n",
+    "    for i in range(1, 11):\n",
+    "        if i == 1:\n",
+    "            df = pd.DataFrame({'Divisor': [i], 'Residual': [num % (i+1)], 'Correction':[i-(num % (i+1))]})\n",
+    "        else:\n",
+    "            new_df = pd.DataFrame({'Divisor': [i], 'Residual': [num % (i+1)], 'Correction':[i-(num % (i+1))]})\n",
+    "            df = pd.concat([df, new_df], ignore_index=True)\n",
+    "        \n",
+    "    if disp:\n",
+    "        print(\"The residuals of \",num,\" are:\")\n",
+    "        print(df)\n",
+    "        \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
    "id": "8eb3c005",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "samps = 12000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "id": "709e9eb7",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The factors of 12000 are:\n",
+      "    Factor 1  Factor 2    delta\n",
+      "0          1   12000.0  11999.0\n",
+      "1          2    6000.0   5998.0\n",
+      "2          3    4000.0   3997.0\n",
+      "3          4    3000.0   2996.0\n",
+      "4          5    2400.0   2395.0\n",
+      "5          6    2000.0   1994.0\n",
+      "6          8    1500.0   1492.0\n",
+      "7         10    1200.0   1190.0\n",
+      "8         12    1000.0    988.0\n",
+      "9         15     800.0    785.0\n",
+      "10        16     750.0    734.0\n",
+      "11        20     600.0    580.0\n",
+      "12        24     500.0    476.0\n",
+      "13        25     480.0    455.0\n",
+      "14        30     400.0    370.0\n",
+      "15        32     375.0    343.0\n",
+      "16        40     300.0    260.0\n",
+      "17        48     250.0    202.0\n",
+      "18        50     240.0    190.0\n",
+      "19        60     200.0    140.0\n",
+      "20        75     160.0     85.0\n",
+      "21        80     150.0     70.0\n",
+      "22        96     125.0     29.0\n",
+      "23       100     120.0     20.0\n",
+      "24       120     100.0     20.0\n",
+      "25       125      96.0     29.0\n",
+      "26       150      80.0     70.0\n",
+      "27       160      75.0     85.0\n",
+      "28       200      60.0    140.0\n",
+      "29       240      50.0    190.0\n",
+      "30       250      48.0    202.0\n",
+      "31       300      40.0    260.0\n",
+      "32       375      32.0    343.0\n",
+      "33       400      30.0    370.0\n",
+      "34       480      25.0    455.0\n",
+      "35       500      24.0    476.0\n",
+      "36       600      20.0    580.0\n",
+      "37       750      16.0    734.0\n",
+      "38       800      15.0    785.0\n",
+      "39      1000      12.0    988.0\n",
+      "40      1200      10.0   1190.0\n",
+      "41      1500       8.0   1492.0\n",
+      "42      2000       6.0   1994.0\n",
+      "43      2400       5.0   2395.0\n",
+      "44      3000       4.0   2996.0\n",
+      "45      4000       3.0   3997.0\n",
+      "46      6000       2.0   5998.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "fact = factors(samps, disp = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "id": "6d5d332b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Factor 1</th>\n",
+       "      <th>Factor 2</th>\n",
+       "      <th>delta</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>100</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Factor 1  Factor 2  delta\n",
+       "23       100     120.0   20.0"
+      ]
+     },
+     "execution_count": 236,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fact.iloc[fact[['delta']].idxmin(),:]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "id": "93139879",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The residuals of  12000  are:\n",
+      "   Divisor  Residual  Correction\n",
+      "0        1         0           1\n",
+      "1        2         0           2\n",
+      "2        3         0           3\n",
+      "3        4         0           4\n",
+      "4        5         0           5\n",
+      "5        6         2           4\n",
+      "6        7         0           7\n",
+      "7        8         3           5\n",
+      "8        9         0           9\n",
+      "9       10        10           0\n"
+     ]
+    }
+   ],
+   "source": [
+    "resid = print_resid(samps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "id": "5987175d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Divisor</th>\n",
+       "      <th>Correction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Divisor  Correction\n",
+       "0        1           1\n",
+       "1        2           2\n",
+       "2        3           3\n",
+       "3        4           4\n",
+       "4        5           5\n",
+       "5        6           4\n",
+       "6        7           7\n",
+       "7        8           5\n",
+       "8        9           9\n",
+       "9       10           0"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resid[['Divisor', 'Correction']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "id": "3bd4efde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def square_array(num):\n",
+    "    resid = print_resid(num, disp = False)\n",
+    "\n",
+    "    for i in range(10):\n",
+    "        facts = factors(num + resid['Correction'][i], disp = False)\n",
+    "    \n",
+    "        min_fact = facts.iloc[facts[['delta']].idxmin(),:].copy()\n",
+    "    \n",
+    "        min_fact['Cells'] = min_fact['Factor 1']*min_fact['Factor 2']\n",
+    "        min_fact['null Cells'] = min_fact['Cells'].values-num\n",
+    "        \n",
+    "        if i == 0:\n",
+    "            results = min_fact\n",
+    "        else:\n",
+    "            results = pd.concat([results, min_fact], ignore_index=True)\n",
+    "            \n",
+    "    min_shape = results.iloc[results[['delta']].idxmin()].copy()\n",
+    "    \n",
+    "    return min_shape\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "id": "77408008",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Factor 1</th>\n",
+       "      <th>Factor 2</th>\n",
+       "      <th>delta</th>\n",
+       "      <th>Cells</th>\n",
+       "      <th>null Cells</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>100</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>12000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Factor 1  Factor 2  delta    Cells  null Cells\n",
+       "9       100     120.0   20.0  12000.0         0.0"
+      ]
+     },
+     "execution_count": 276,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "square_array(12000)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "id": "d2f3c216",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Factor 1</th>\n",
+       "      <th>Factor 2</th>\n",
+       "      <th>delta</th>\n",
+       "      <th>Cells</th>\n",
+       "      <th>null Cells</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1091.0</td>\n",
+       "      <td>1080.0</td>\n",
+       "      <td>12001.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>34</td>\n",
+       "      <td>353.0</td>\n",
+       "      <td>319.0</td>\n",
+       "      <td>12002.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4001.0</td>\n",
+       "      <td>3998.0</td>\n",
+       "      <td>12003.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3001.0</td>\n",
+       "      <td>2997.0</td>\n",
+       "      <td>12004.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>49</td>\n",
+       "      <td>245.0</td>\n",
+       "      <td>196.0</td>\n",
+       "      <td>12005.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3001.0</td>\n",
+       "      <td>2997.0</td>\n",
+       "      <td>12004.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>12007.0</td>\n",
+       "      <td>12006.0</td>\n",
+       "      <td>12007.0</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>49</td>\n",
+       "      <td>245.0</td>\n",
+       "      <td>196.0</td>\n",
+       "      <td>12005.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4003.0</td>\n",
+       "      <td>4000.0</td>\n",
+       "      <td>12009.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>12011.0</td>\n",
+       "      <td>12010.0</td>\n",
+       "      <td>12011.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Factor 1  Factor 2    delta    Cells  null Cells\n",
+       "0        11    1091.0   1080.0  12001.0         0.0\n",
+       "1        34     353.0    319.0  12002.0         1.0\n",
+       "2         3    4001.0   3998.0  12003.0         2.0\n",
+       "3         4    3001.0   2997.0  12004.0         3.0\n",
+       "4        49     245.0    196.0  12005.0         4.0\n",
+       "5         4    3001.0   2997.0  12004.0         3.0\n",
+       "6         1   12007.0  12006.0  12007.0         6.0\n",
+       "7        49     245.0    196.0  12005.0         4.0\n",
+       "8         3    4003.0   4000.0  12009.0         8.0\n",
+       "9         1   12011.0  12010.0  12011.0        10.0"
+      ]
+     },
+     "execution_count": 262,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06da4b28",
    "metadata": {},
    "outputs": [],
    "source": []
