Multi-Element Detector Update

--- a/notebooks/BL specific XAS data structures.ipynb
+++ b/notebooks/BL specific XAS data structures.ipynb
@@ -47,6 +47,25 @@
     "    'is QEXAFS': False\n",
     "}\n",
     "\n",
+    "# SSRL 9-3: 100-element Ge detector\n",
+    "Ge100_data_structure = {\n",
+    "    'time stamp': True,\n",
+    "    'time on line': 1,\n",
+    "    'time format': '%a %b %d %H:%M:%S %Y',\n",
+    "    'padded scan numbers': True,\n",
+    "    'column names': ['Real time clock', 'Sum_RTC', 'Requested Energy', 'Achieved Energy', 'I0', 'I1', 'I2', 'I3', 'Spare1', 'Spare2', 'Spare3', 'Spare4', 'SCA1_1', 'SCA1_2', 'SCA1_3', 'SCA1_4', 'SCA1_5', 'SCA1_6', 'SCA1_7', 'SCA1_8', 'SCA1_9', 'SCA1_10', 'SCA1_11', 'SCA1_12', 'SCA1_13', 'SCA1_14', 'SCA1_15', 'SCA1_16', 'SCA1_17', 'SCA1_18', 'SCA1_19', 'SCA1_20', 'SCA1_21', 'SCA1_22', 'SCA1_23', 'SCA1_24', 'SCA1_25', 'SCA1_26', 'SCA1_27', 'SCA1_28', 'SCA1_29', 'SCA1_30', 'SCA1_31', 'SCA1_32', 'SCA1_33', 'SCA1_34', 'SCA1_35', 'SCA1_36', 'SCA1_37', 'SCA1_38', 'SCA1_39', 'SCA1_40', 'SCA1_41', 'SCA1_42', 'SCA1_43', 'SCA1_44', 'SCA1_45', 'SCA1_46', 'SCA1_47', 'SCA1_48', 'SCA1_49', 'SCA1_50', 'SCA1_51', 'SCA1_52', 'SCA1_53', 'SCA1_54', 'SCA1_55', 'SCA1_56', 'SCA1_57', 'SCA1_58', 'SCA1_59', 'SCA1_60', 'SCA1_61', 'SCA1_62', 'SCA1_63', 'SCA1_64', 'SCA1_65', 'SCA1_66', 'SCA1_67', 'SCA1_68', 'SCA1_69', 'SCA1_70', 'SCA1_71', 'SCA1_72', 'SCA1_73', 'SCA1_74', 'SCA1_75', 'SCA1_76', 'SCA1_77', 'SCA1_78', 'SCA1_79', 'SCA1_80', 'SCA1_81', 'SCA1_82', 'SCA1_83', 'SCA1_84', 'SCA1_85', 'SCA1_86', 'SCA1_87', 'SCA1_88', 'SCA1_89', 'SCA1_90', 'SCA1_91', 'SCA1_92', 'SCA1_93', 'SCA1_94', 'SCA1_95', 'SCA1_96', 'SCA1_97', 'SCA1_98', 'SCA1_99', 'SCA1_100', 'ICR_1', 'ICR_2', 'ICR_3', 'ICR_4', 'ICR_5', 'ICR_6', 'ICR_7', 'ICR_8', 'ICR_9', 'ICR_10', 'ICR_11', 'ICR_12', 'ICR_13', 'ICR_14', 'ICR_15', 'ICR_16', 'ICR_17', 'ICR_18', 'ICR_19', 'ICR_20', 'ICR_21', 'ICR_22', 'ICR_23', 'ICR_24', 'ICR_25', 'ICR_26', 'ICR_27', 'ICR_28', 'ICR_29', 'ICR_30', 'ICR_31', 'ICR_32', 'ICR_33', 'ICR_34', 'ICR_35', 'ICR_36', 'ICR_37', 'ICR_38', 'ICR_39', 'ICR_40', 'ICR_41', 'ICR_42', 'ICR_43', 'ICR_44', 'ICR_45', 'ICR_46', 'ICR_47', 'ICR_48', 'ICR_49', 'ICR_50', 'ICR_51', 'ICR_52', 'ICR_53', 'ICR_54', 'ICR_55', 'ICR_56', 'ICR_57', 'ICR_58', 'ICR_59', 'ICR_60', 'ICR_61', 'ICR_62', 'ICR_63', 'ICR_64', 'ICR_65', 'ICR_66', 'ICR_67', 'ICR_68', 'ICR_69', 'ICR_70', 'ICR_71', 'ICR_72', 'ICR_73', 'ICR_74', 'ICR_75', 'ICR_76', 'ICR_77', 'ICR_78', 'ICR_79', 'ICR_80', 'ICR_81', 'ICR_82', 'ICR_83', 'ICR_84', 'ICR_85', 'ICR_86', 'ICR_87', 'ICR_88', 'ICR_89', 'ICR_90', 'ICR_91', 'ICR_92', 'ICR_93', 'ICR_94', 'ICR_95', 'ICR_96', 'ICR_97', 'ICR_98', 'ICR_99', 'ICR_100'],\n",
+    "    'energy column' : 'Achieved Energy', # Energy [eV]\n",
+    "    'sample numerator': ['SCA1_1', 'SCA1_2', 'SCA1_3', 'SCA1_4', 'SCA1_5', 'SCA1_6', 'SCA1_7', 'SCA1_8', 'SCA1_9', 'SCA1_10', 'SCA1_11', 'SCA1_12', 'SCA1_13', 'SCA1_14', 'SCA1_15', 'SCA1_16', 'SCA1_17', 'SCA1_18', 'SCA1_19', 'SCA1_20', 'SCA1_21', 'SCA1_22', 'SCA1_23', 'SCA1_24', 'SCA1_25', 'SCA1_26', 'SCA1_27', 'SCA1_28', 'SCA1_29', 'SCA1_30', 'SCA1_31', 'SCA1_32', 'SCA1_33', 'SCA1_34', 'SCA1_35', 'SCA1_36', 'SCA1_37', 'SCA1_38', 'SCA1_39', 'SCA1_40', 'SCA1_41', 'SCA1_42', 'SCA1_43', 'SCA1_44', 'SCA1_45', 'SCA1_46', 'SCA1_47', 'SCA1_48', 'SCA1_49', 'SCA1_50', 'SCA1_51', 'SCA1_52', 'SCA1_53', 'SCA1_54', 'SCA1_55', 'SCA1_56', 'SCA1_57', 'SCA1_58', 'SCA1_59', 'SCA1_60', 'SCA1_61', 'SCA1_62', 'SCA1_63', 'SCA1_64', 'SCA1_65', 'SCA1_66', 'SCA1_67', 'SCA1_68', 'SCA1_69', 'SCA1_70', 'SCA1_71', 'SCA1_72', 'SCA1_73', 'SCA1_74', 'SCA1_75', 'SCA1_76', 'SCA1_77', 'SCA1_78', 'SCA1_79', 'SCA1_80', 'SCA1_81', 'SCA1_82', 'SCA1_83', 'SCA1_84', 'SCA1_85', 'SCA1_86', 'SCA1_87', 'SCA1_88', 'SCA1_89', 'SCA1_90', 'SCA1_91', 'SCA1_92', 'SCA1_93', 'SCA1_94', 'SCA1_95', 'SCA1_96', 'SCA1_97', 'SCA1_98', 'SCA1_99', 'SCA1_100'], #Sum of some SCAs\n",
+    "    'sample denominator': 'I0', # I0\n",
+    "    'sample ln': False,\n",
+    "    'sample invert': False,\n",
+    "    'reference numerator': 'I0', # I0\n",
+    "    'reference denominator': 'I2', # I2\n",
+    "    'reference ln': True,\n",
+    "    'reference invert': False,\n",
+    "    'is QEXAFS': False\n",
+    "}\n",
+    "\n",
     "#SSRL 15-2: HERFD\n",
     "HERFD_data_structure = {\n",
     "    'time stamp': True,\n",
@@ -86,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
